<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/userHomeGreeting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userGreeting1TV"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="28sp" />

    <Button
        android:text="@string/savingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/savingsButton"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_below="@+id/checkingButton"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/background_light" />

    <Button
        android:text="@string/checkingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/checkingButton"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/userGreeting3"
        android:layout_alignLeft="@+id/savingsButton"
        android:layout_alignStart="@+id/savingsButton" />

    <TextView
        android:text="@string/userHomeGreeting3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/userGreeting3"
        android:textStyle="normal|bold"
        android:textSize="15sp"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/userGreeting2TV"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/userHomeGreeting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/userGreeting2TV"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/userGreeting1TV"
        android:layout_centerHorizontal="true" />

</RelativeLayout>